syntax = "proto3";
package transaction;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "message.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: { title: "User Transaction", version: "1.0.0" },
  host: "localhost:9000",
  schemes: HTTP
};

service Service {
  rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse) {
    option (google.api.http) = {
      get: "/api/auth/users/{user_id}/transactions"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer token"
          type: STRING
        }
      }
    };
  }

  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse) {
    option (google.api.http) = {
      post: "/api/auth/users/{user_id}/transactions",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer token"
          type: STRING
        }
      }
    };
  }

  rpc UpdateTransaction(UpdateTransactionRequest) returns (UpdateTransactionResponse) {
    option (google.api.http) = {
      put: "/api/auth/users/{user_id}/transactions/{transaction_id}",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer token"
          type: STRING
        }
      }
    };
  }

  rpc DeleteTransaction(DeleteTransactionRequest) returns (DeleteTransactionResponse) {
    option (google.api.http) = {
      delete: "/api/auth/users/{user_id}/transactions/{transaction_id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer token"
          type: STRING
        }
      }
    };
  }

}